# libsabine

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  justfile  shell.nix
.github/workflows/: test.yml
include/sabine/: buffer.h  vector.h
src/: buffer.c  vector.c
